# padel-shot-classifier

./: README.md  annotator.py  pyproject.toml  shots.csv
.claude/context/: product-context.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-style-guide.md  project-vision.md  system-patterns.md  tech-context.md
.claude/epics/automatic-shot-detection/: 2.md  3.md  4-analysis.md  4.md  5-analysis.md  5.md  6.md  7.md  8.md  9.md  epic.md  github-mapping.md
.claude/epics/automatic-shot-detection/updates/4/: stream-A.md
.claude/epics/automatic-shot-detection/updates/5/: stream-A.md
.claude/prds/: automatic-shot-detection.md
docs/specs/: PROJECT_BRIEF.md
src/padel_shot_classifier/: classifier.py  feature_calculator.py  main.py  pose_extractor.py  shot_detector.py  shot_segmenter.py  signal_utils.py  visualizer.py
tests/: test_shot_detector.py  test_signal_utils.py
